fixing contrast ratios

--- a/Documentation/assets/css/demo-documentation.css
+++ b/Documentation/assets/css/demo-documentation.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E5E5E5;
+    background-color: #F7F7F7;
     color: #3C4858;
 }
 
